--- a/_config.yml
+++ b/_config.yml
@@ -139,7 +139,7 @@ email: "yuzixun1991@icloud.com"
 
 # if the author_blurb is not set, then this feature is skipped
 author_blurb: "John Smith is an awesome person. He lives in Flatland, where he works on two-dimensional engineering projects. In his spare time, John likes to eat cotton candy."
-author_blurb_image: "/img/author.png"
+author_blurb_image: "/img/author.jpg"
 
 ##################
 # Social Buttons #
