优化文章摘要

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ icon-192p: "/img/web-app/icon-192p.png"
 # Blog #
 ########
 
-post-preview-words: 96
+post-preview-words: 10
 
 paginate: 5
 
@@ -104,6 +104,8 @@ vkontakte-share: True
 disqus-shortname: "panossakkos"
 
 syntax-highlight: True
+
+excerpt_separator: <!--more--> 
 
 ############
 # Timeline #
