修复 博客页面 不显示文章的问题

--- a/_config.yml
+++ b/_config.yml
@@ -183,7 +183,7 @@ exclude: ["LICENSE", "README.md", "CONTRIBUTING", "CONTRIBUTORS", "scripts"]
 
 # Pagination path
 
-paginate_path: "index/page:num/"
+paginate_path: "blog/page:num/"
 
 # Enable minification SASS
 
