--- a/_config.yml
+++ b/_config.yml
@@ -107,6 +107,10 @@ syntax-highlight: True
 
 excerpt_separator: <!--more--> 
 
+markdown: redcarpet
+redcarpet: 
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "highlight", "with_toc_data", "strikethrough", "underline"]
+
 ############
 # Timeline #
 ############
